Added additional locking for the auto update fields ie mime type and file size. refs #2144 #2180 #2212